@@ -61,13 +61,12 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 441)
-(Parent-Version lpmud 3-3 440)
-(Version-Log "Adjacent small free blocks are now merged as soon as they are detected.
-The data of lost blocks is now printed as a proper hexdump.")
+(Project-Version lpmud 3-3 442)
+(Parent-Version lpmud 3-3 441)
+(Version-Log "Corrected a compilation error.")
 (New-Version-Log
 "")
-(Checkin-Time "Sat, 12 Apr 2003 15:27:51 -0600")
+(Checkin-Time "Sat, 12 Apr 2003 16:37:23 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -104,7 +103,7 @@ The data of lost blocks is now printed as a proper hexdump.")
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.8 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.62 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.504 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.505 644))
   (HISTORY (lpmud/f/49_HISTORY 1.318 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.19 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -135,14 +134,14 @@ The data of lost blocks is now printed as a proper hexdump.")
   (src/settings/eotl (lpmud/g/40_eotl 1.2.1.5 744))
   (src/settings/evermore (lpmud/e/31_evermore 1.1.1.8 744))
   (src/settings/evermore-cross (lpmud/a/b/25_evermore-c 1.4 744))
-  (src/settings/finalfrontier (lpmud/i/29_finalfront 1.1.1.6 744))
+  (src/settings/finalfrontier (lpmud/i/29_finalfront 1.1.1.5 744))
   (src/settings/forgottendreams (lpmud/h/2_forgottend 1.2.1.8 744))
   (src/settings/heaven7 (lpmud/k/22_heaven7 1.5 644))
   (src/settings/hyperborea (lpmud/h/20_hyperborea 1.3 744))
   (src/settings/morgengrauen (lpmud/k/37_morgengrau 1.7 744))
   ;(src/settings/lethynna (lpmud/d/b/21_lethynna 1.1 744))
   (src/settings/lpmud.net (lpmud/e/b/7_lpmud.net 1.1 744))
-  (src/settings/osb (lpmud/c/8_osb 1.19 744))
+  (src/settings/osb (lpmud/c/8_osb 1.18 744))
   (src/settings/pkmud (lpmud/c/25_pkmud 1.5.1.5 744))
   (src/settings/psycmuve (lpmud/i/42_psycmuve 1.1.1.6 744))
   (src/settings/quovadis (lpmud/h/12_quovadis 1.1.1.7 744))
@@ -300,7 +299,7 @@ The data of lost blocks is now printed as a proper hexdump.")
   (src/wiz_list.h (lpmud/1_wiz_list.h 1.5.1.7.1.3 644))
   (src/wiz_list.c (lpmud/2_wiz_list.c 1.13.1.14.1.4 644))
   (src/xalloc.h (lpmud/g/51_xalloc.h 1.20 644))
-  (src/xalloc.c (lpmud/h/0_xalloc.c 1.2.1.29 644))
+  (src/xalloc.c (lpmud/h/0_xalloc.c 1.2.1.31 644))
   ;(src/xptmalloc.c (lpmud/d/b/1_xptmalloc. 1.6 644))
 
   ;; Build files
@@ -874,10 +873,6 @@ The data of lost blocks is now printed as a proper hexdump.")
 
   (src/done/p-990901 (lpmud/e/10_p-990901 1.2.1.1 644) :no-keywords)
   (src/done/p-010928-0 (lpmud/n/46_p-010928-0 1.2 644) :no-keywords)
-  (src/done/p-011012 (lpmud/n/50_p-011012 1.5 644) :no-keywords)
-  (src/done/p-020810-1 (lpmud/a/b/4_p-020810-1 1.2 644) :no-keywords)
-  ;(src/done/ff-3.3.325-diffs (lpmud/d/b/15_ff-3.3.325 1.1 644))
-  (src/done/3.3.443-mccp.patch (lpmud/d/b/50_3.3.443-mc 1.1 644))
 
   ;; GCC patches
   (src/gcc/README (lpmud/e/19_README 1.1 644))
@@ -1439,13 +1434,6 @@ The data of lost blocks is now printed as a proper hexdump.")
   (doc/obsolete/rxcache.doc (lpmud/b/b/22_rxcache.do 1.1 644))
   (doc/obsolete/send_imp (lpmud/b/b/23_send_imp 1.2 644))
   (doc/obsolete/set_auto_include_string (lpmud/b/b/24_set_auto_i 1.1 644))
-
-  (doc/other/mxp.htm (lpmud/c/b/29_mxp.htm 1.1 644) :no-keywords)
-  ;(doc/other/msp.htm (lpmud/d/b/10_msp.htm 1.1 644) :no-keywords)
-  ;(doc/other/mcp.htm (lpmud/d/b/11_mcp.htm 1.1 644) :no-keywords)
-  (doc/other/mcp2.html (lpmud/c/b/30_mcp2.html 1.1 644) :no-keywords)
-  (doc/other/flows.gif (lpmud/c/b/32_flows.gif 1.1 644) :no-keywords)
-  (doc/other/mccp.htm (lpmud/c/b/31_mccp.htm 1.1 644) :no-keywords)
 
   ;; Mudlib Support
   (mud/README (lpmud/t/12_README 1.6.1.4 644))
