@@ -1,6 +1,10 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+12-Apr-2002 (Lars Duening)  (3.3.442)
+  - (xalloc.c) Corrected a compilation error when MALLOC_TRACE was not
+       defined.
+
 12-Apr-2002 (Lars Duening)  (3.3.441)
   - (smalloc.c) Adjacent free small blocks are now merged automatically
        as soon as they are detected. This reduces the mem_consolidation()
